--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "affiliate-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,10 @@
   "bugs": {
     "url": "https://github.com/Keong96/affiliate-api/issues"
   },
-  "homepage": "https://github.com/Keong96/affiliate-api#readme"
+  "homepage": "https://github.com/Keong96/affiliate-api#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {},
+  "description": ""
 }
